# afk

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: CHANGELOG_ENTRY_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: ci.yml  pr-release-note-check.yml
agent-skill/afk-agentic-coding/: SKILL.md
agent-skill/coder/: SKILL.md
agent-skill/maintainer/: SKILL.md
docs/: docs.json  index.mdx
docs/llms/: adapters.mdx  agent-integration.mdx  contracts.mdx  control-and-session.mdx  index.mdx
examples/cookbooks/: basic_agent.py  multi_agent.py  tool_agent.py
examples/projects/: FEATURE_MATRIX.md  _validation.py  validate_examples.py
examples/projects/26_Interactive_Approval_Workflow_Agent/: README.md  pyproject.toml
examples/projects/26_Interactive_Approval_Workflow_Agent/app/: complexity_chain.py  complexity_config.py  interaction.py  llm_stub.py  scenario.py  tools.py  workflow.py
examples/projects/26_Interactive_Approval_Workflow_Agent/app/stages/: __init__.py  stage_01.py  stage_02.py  stage_03.py  stage_04.py  stage_05.py  stage_06.py  stage_07.py  stage_08.py  stage_09.py  stage_10.py  stage_11.py  stage_12.py  stage_13.py  stage_14.py  stage_15.py  stage_16.py  stage_17.py  stage_18.py  stage_19.py  stage_20.py  stage_21.py  stage_22.py  stage_23.py  stage_24.py  stage_25.py  stage_26.py  stage_27.py
scripts/: build_agentic_ai_assets.sh  setup_example.sh
skills/afk-coder/: SKILL.md  llms.txt
skills/afk-maintainer/: SKILL.md
src/afk/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_integration.py
tests/agents/: test_a2a_auth_and_host.py  test_a2a_delivery.py  test_agent_lifecycle_runtime.py  test_agent_runtime.py  test_agent_types.py  test_background_tools.py  test_policy_engine.py  test_prompt_loader.py  test_subagent_orchestration_telemetry.py  test_versioning.py
tests/core/: test_debugger.py  test_interaction_provider.py  test_runner_chaos.py  test_runner_reasoning_controls.py  test_runner_streaming.py  test_streaming.py
tests/evals/: test_budgets_and_assertions.py  test_eval_golden_trace.py  test_evals_comprehensive.py  test_fail_policies.py  test_reporting_and_datasets.py  test_suite_execution.py
tests/examples/: test_example_projects_validation.py
tests/llms/: test_anthropic_agent_sdk_adapter.py  test_llm_cache.py  (+10 more)
(+915 files in other folders)
