[project]
name = "afk-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "async-lru>=2.1.0",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.1",
    "claude-agent-sdk==0.1.37",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "litellm==1.81.13",
    "numpy>=2.3.0",
    "openai==2.21.0",
    "prometheus-client>=0.24.1",
    "pytest>=9.0.2",
    "redis==7.2.0",
]

[project.optional-dependencies]
a2a = [
    "PyJWT>=2.10.1",
]

[tool.uv.workspace]
members = [
    "examples/projects/01_Greeting_Agent",
    "examples/projects/02_Revenue_Lead_Scorer_Agent",
]
